--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,41 @@
   padding: 0;
 }
 
+:root {
+  --white: #FFFF;
+  --gray-100: #e1e1e6;
+  --gray-300: #A8A8B3;
+  --gray-900: #121214;
+
+  --cyan-500: #61BAFB;
+  --yellow-500: #EBA417;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background-color: var(--gray-900);
+  color: var(--white);
+}
+
+body, input, select, textarea, button {
+  font: 400 1rem "Roboto", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
 a {
   color: inherit;
   text-decoration: none;
