--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,7 @@
   --white: #FFFF;
   --gray-100: #e1e1e6;
   --gray-300: #A8A8B3;
+  --gray-800: #29292E;
   --gray-900: #121214;
 
   --cyan-500: #61BAFB;
