--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,6 +9,7 @@
   --gray-100: #e1e1e6;
   --gray-300: #A8A8B3;
   --gray-800: #29292E;
+  --gray-850: #1F2729;
   --gray-900: #121214;
 
   --cyan-500: #61BAFB;
